@@ -19,8 +19,7 @@ def launch_process(action_executor:ActionExecutor,
 
 def load_station(loader: Loader,
                  stations : Iterator[Station]):
-    for station in stations:
-        print(f"save station {station}")
+    loader.upsert_records(stations)
 
 
 if __name__ == "__main__":
@@ -34,18 +33,21 @@ if __name__ == "__main__":
     API_ID = os.getenv("API_ID")
     api_url =  f"https://data.toulouse-metropole.fr/api/explore/v2.1/catalog/datasets/{API_ID}/exports/csv?lang=fr&timezone=Europe%2FBerlin&use_labels=true&delimiter=%3B"
     extract = Extract(ExtractStationDataCSV(api_url))
+    station_postgres = PostgresQueriesStation()
     loader = Loader(PostgresConnector(
         host = DB_HOST,
         port = DB_PORT,
         dbname = DB_NAME,
         user = DB_USER,
         password = DB_PASSWD,
-        db_queries = PostgresQueriesStation()
+        db_queries = station_postgres
     ))
     action_executor = ActionExecutor(ActionStation())
-    stations = launch_process(action_executor, extract_stations(extract))
+    stations = extract_stations(extract)
     load_station(loader, stations)
-
+    first_10_stations = station_postgres.parse_data(iter(loader.read_data()[:3]))
+    for r in launch_process(action_executor, first_10_stations):
+        print("action done")
     loader.close()
 
     print("End of Extract and Load")
